# schorsch-the-robot

./: Hauptseite.md  ProjectHome.md
arduino/SchorschMeishiGate/: SchorschMeishiGate.ino
arduino/simple_lightswitch/: simple_lightswitch.ino
cmake/: CMakeLists.txt  cmake.kdev4
cmake/Control2012/: CMakeLists.txt
cmake/CooleConsole/: CMakeLists.txt
cmake/DrawTextToPlaneGUI/: CMakeLists.txt
cmake/MeishiGateControl/: CMakeLists.txt
cmake/OhEsWeihnachtetSehr/: CMakeLists.txt
cmake/RobotLib/: CMakeLists.txt
src/ConsoleTest/: ConsoleTest  ConsoleTest.pro  main.cpp
src/Control2012/: AutomationThread.cpp  AutomationThread.h  ImpressAutomation.cpp  ImpressAutomation.h  MeishiGateControl.cpp  MeishiGateControl.h  main.cpp  maingui.cpp  maingui.h  maingui.ui
src/Control2012/libreoffice/com/sun/star/accessibility/: AccessibleEventId.hdl  AccessibleEventObject.hdl  AccessibleEventObject.hpp  AccessibleRelation.hdl  AccessibleRelation.hpp  AccessibleRelationType.hdl  AccessibleRole.hdl  AccessibleStateType.hdl  AccessibleTableModelChange.hdl  AccessibleTableModelChange.hpp  AccessibleTableModelChangeType.hdl  AccessibleTextType.hdl  IllegalAccessibleComponentStateException.hdl  IllegalAccessibleComponentStateException.hpp  TextSegment.hdl  TextSegment.hpp  XAccessible.hdl  XAccessible.hpp  XAccessibleAction.hdl  XAccessibleAction.hpp  XAccessibleComponent.hdl  XAccessibleComponent.hpp  XAccessibleContext.hdl  XAccessibleContext.hpp  XAccessibleEditableText.hdl  XAccessibleEditableText.hpp  XAccessibleEventBroadcaster.hdl  XAccessibleEventBroadcaster.hpp  XAccessibleEventListener.hdl  XAccessibleEventListener.hpp  XAccessibleExtendedComponent.hdl  XAccessibleExtendedComponent.hpp  XAccessibleHyperlink.hdl  XAccessibleHyperlink.hpp  XAccessibleHypertext.hdl  XAccessibleHypertext.hpp  XAccessibleImage.hdl  XAccessibleImage.hpp  XAccessibleKeyBinding.hdl  XAccessibleKeyBinding.hpp  (+18 more)
src/Control2012/libreoffice/com/sun/star/animations/: AnimationAdditiveMode.hdl  AnimationColorSpace.hdl  AnimationEndSync.hdl  AnimationFill.hdl  AnimationNodeType.hdl  AnimationRestart.hdl  AnimationTransformType.hdl  AnimationValueType.hdl  Event.hdl  Event.hpp  EventTrigger.hdl  TargetProperties.hdl  TargetProperties.hpp  TargetPropertiesCreator.hpp  TimeFilterPair.hdl  TimeFilterPair.hpp  Timing.hdl  Timing.hpp  TransitionSubType.hdl  TransitionType.hdl  ValuePair.hdl  ValuePair.hpp  XAnimate.hdl  XAnimate.hpp  XAnimateColor.hdl  XAnimateColor.hpp  XAnimateMotion.hdl  XAnimateMotion.hpp  XAnimateSet.hdl  XAnimateSet.hpp  XAnimateTransform.hdl  XAnimateTransform.hpp  XAnimationListener.hdl  XAnimationListener.hpp  XAnimationNode.hdl  XAnimationNode.hpp  XAnimationNodeSupplier.hdl  XAnimationNodeSupplier.hpp  XAudio.hdl  XAudio.hpp  (+10 more)
src/Control2012/libreoffice/com/sun/star/auth/: AuthenticationFailedException.hdl  AuthenticationFailedException.hpp  InvalidArgumentException.hdl  InvalidArgumentException.hpp  InvalidContextException.hdl  InvalidContextException.hpp  InvalidCredentialException.hdl  InvalidCredentialException.hpp  InvalidPrincipalException.hdl  InvalidPrincipalException.hpp  PersistenceFailureException.hdl  PersistenceFailureException.hpp  UnsupportedException.hdl  UnsupportedException.hpp  XSSOAcceptorContext.hdl  XSSOAcceptorContext.hpp  XSSOContext.hdl  XSSOContext.hpp  XSSOInitiatorContext.hdl  XSSOInitiatorContext.hpp  XSSOManager.hdl  XSSOManager.hpp  XSSOManagerFactory.hdl  XSSOManagerFactory.hpp  XSSOPasswordCache.hdl  XSSOPasswordCache.hpp
src/Control2012/libreoffice/com/sun/star/awt/: ActionEvent.hdl  ActionEvent.hpp  AdjustmentEvent.hdl  AdjustmentEvent.hpp  AdjustmentType.hdl  AdjustmentType.hpp  AsyncCallback.hpp  CharSet.hdl  Command.hdl  ContainerWindowProvider.hpp  DeviceCapability.hdl  DialogProvider.hpp  DialogProvider2.hpp  DockingData.hdl  DockingData.hpp  DockingEvent.hdl  DockingEvent.hpp  EndDockingEvent.hdl  EndDockingEvent.hpp  EndPopupModeEvent.hdl  EndPopupModeEvent.hpp  EnhancedMouseEvent.hdl  EnhancedMouseEvent.hpp  FieldUnit.hdl  FocusChangeReason.hdl  FontEmphasisMark.hdl  FontFamily.hdl  FontRelief.hdl  FontStrikeout.hdl  FontType.hdl  FontUnderline.hdl  FontWeight.hdl  FontWidth.hdl  Gradient.hdl  Gradient.hpp  ImageAlign.hdl  ImagePosition.hdl  ImageScaleMode.hdl  ImageStatus.hdl  InvalidateStyle.hdl  (+277 more)
src/Control2012/libreoffice/com/sun/star/beans/: Ambiguous.hdl  Ambiguous.hpp  Defaulted.hdl  Defaulted.hpp  GetDirectPropertyTolerantResult.hdl  GetDirectPropertyTolerantResult.hpp  GetPropertyTolerantResult.hdl  GetPropertyTolerantResult.hpp  IllegalTypeException.hdl  IllegalTypeException.hpp  IntrospectionException.hdl  IntrospectionException.hpp  MethodConcept.hdl  NotRemoveableException.hdl  NotRemoveableException.hpp  Optional.hdl  Optional.hpp  Pair.hdl  Pair.hpp  PropertyAttribute.hdl  PropertyConcept.hdl  PropertyExistException.hdl  PropertyExistException.hpp  PropertySetInfoChangeEvent.hdl  PropertySetInfoChangeEvent.hpp  PropertyValues.hdl  (+60 more)
src/CooleConsole/: CooleConsole  CooleConsole.pro  main.cpp
src/DrawTextToPlaneGUI/: DrawTextToPlaneGUI  DrawTextToPlaneGUI.pro  Makefile  maingui.cpp  maingui.h  maingui.ui
src/MeishiGateControl/: MeishiGateControl.cpp  MeishiGateControl.h  main.cpp
src/OhEsWeihnachtetSehr/: main.cpp  maingui.cpp  maingui.h  maingui.ui  moc_maingui.cpp
src/RobotLib/: Grip.h  HelperMethods.h  Joint.h  Keyboard.h  Matrix.h  Music.h  PlaneToCoordinateSystem.h  Position.h  Robot.h  RobotLib.pro  RobotPort.h  Text.h  Types.h  Vector.h  Where.h  robotlib.cpp
src/UberGUI/: UberGUI  UberGUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/qextserialport/src/: src.pro
text/LangeNachtDerWissenschaften-2011-10-22/: Asteroidenfeld.txt  Bishop.txt  Cake.txt  Dalek.txt  DaveStop.txt  EndOfLine.txt  Fluchtplan.txt  Gesetz1.txt  Gesetz2.txt  Gesetz3.txt  Gesetz4.txt  HEX.txt  JohnConnor.txt  Marvin.txt  Mitnehmen.txt  Motorad.txt  Märchen.txt  NewFiles.sh  NichtDerDroide.txt  Nr5.txt  Robocop.txt  Robotermenschkontakter.txt  SarahConner.txt  Spaceballs.txt  TyrellCoperation.txt  Werksstudent.txt
(+4843 files in other folders)
