#--------------------------------------
# Robot Solution
#--------------------------------------

cmake_minimum_required (VERSION 2.8)
project (Robot_SOLUTION)

add_subdirectory (RobotLib)
add_subdirectory (CooleConsole)
add_subdirectory (DrawTextToPlaneGUI)
add_subdirectory (OhEsWeihnachtetSehr)
add_subdirectory (Control2012)
add_subdirectory (MeishiGateControl)

